--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <script>
-        
+        function computerPlay() {
+            const choices = ['Rock', 'Paper', 'Scissors'];
+            const computerChoice = choices[Math.floor(Math.random() * choices.length)];
+            console.log(computerChoice)
+        }
+        computerPlay()
     </script>
 </body>
 </html>
