--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
             }
         }
 
-
-        btns.forEach(btn => btn.addEventListener('click', function (e) {
+        const gameLogic = function (e) {
             if (gameIsOn) {
                 const playerSelection = e.target['id']
                 const computerSelection = computerPlay()
@@ -73,7 +72,9 @@
                 currentResult.textContent = "The Game Is Already Over!!!"
             }
 
-        }))
+        }
+
+        btns.forEach(btn => btn.addEventListener('click', gameLogic))
     </script>
 </body>
 
